<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="edu.ucsb.cs.cs184.ashleyswang.schoolplanner.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="edu.ucsb.cs.cs184.ashleyswang.schoolplanner.ui.manager.ManagerFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_manager" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="edu.ucsb.cs.cs184.ashleyswang.schoolplanner.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_deadlines"
        android:name="edu.ucsb.cs.cs184.ashleyswang.schoolplanner.ui.deadlines.DeadlinesFragment"
        android:label="Deadlines"
        tools:layout="@layout/fragment_deadlines" />
</navigation>